@@ -8,6 +8,7 @@
     * Option to select random signature from most specific matching signatures
     * Option to disable page prefixes in the title
     * More reliable detection of the page type (topics/messages/etc)
+    * Fix user highlighting and numbering in archived topics
 
 2008-08-15:
     * version 0.6.4
